Style layout bugs fixed. Overall layout unchanged.

--- a/staticfiles/stream/styles.css
+++ b/staticfiles/stream/styles.css
@@ -83,6 +83,13 @@ li.list-group-item {
         width: 100%;
         padding: 0;
     }
+
+    .metadata-row {
+        margin-left: 15px !important;
+        margin-top: 5px !important;
+        width: 100% !important;
+    }
+
 }
 
 /* For Tablets */
